--- a/Fairies/web/html/fairiesproject_login.css
+++ b/Fairies/web/html/fairiesproject_login.css
@@ -3,48 +3,118 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
 header {
-    text-align: left;
-    background-color: #49ada1;
-    color: #fff;
-    padding: 30px 0;
-
-}
-
-.newacc {
-    position: absolute;
-    top: 3px;
-    right: 50px;
-    text-decoration:none;
-
-}
-.container {
-    max-width: 400px;
-    margin: 200px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.container label {
-
-    display: block;
-    margin-bottom: 5px;
-}
-.container button {
     width: 100%;
-    padding: 10px;
-    background-color: #3eabab;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    border-bottom: 10px solid #B0DAFF ;
+
 }
-.container input[type="text"],
-.container input[type="password"] {
-    width: 100%;
-    padding: 10px;
+
+h2{
+    margin-top: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    
+    font-weight: bold;
+    font-size: xxx-large;
+    text-align: center;
+    border-bottom: 10px solid #B0DAFF;
+}
+
+.nav-menu {
+    display: flex;
+    flex-wrap: wrap;
+    font-weight: bold;
+    text-align: center;
+}
+
+.nav-menu button {
+    margin: 0 250px;
+    font-size: xx-large;
+}
+
+#loginBtn1,#loginBtn2 {
+    margin-top: 10px;
+    color:black;
+    cursor: pointer;
+    background-color: #B0DAFF;
+    padding: 20px; 
+}
+
+#loginDialog {
+    width: 30%;
+    margin: auto;
+    border: 0;
+    border-radius: 0.25rem;
+    box-shadow: 0 0 1em black;
+}
+
+#loginDialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#loginWrapper {
+    width: 100%;
+}
+
+#loginHeader {
+    background-color: lawngreen;
+    padding: 5px 10px;
+    border-bottom: none;
+}
+
+#loginHeader h2 {
+    font-size: 1em;
+    margin: 0;
+    border-bottom: none;
+}
+
+#loginHeader button {
+    font-size: 1.5em;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0 5px;
+}
+
+#loginWrapper div {
+    width: 80%;
+    margin: 10px auto;
+}
+
+#loginWrapper input {
+    width: 100%;
+    height: 1.5em;
+    font-size: 1.2em;
+}
+
+#loginWrapper button[type=submit] {
+    display: block;
+    width: 80%;
+    margin: 10px auto;
+    padding: 5px 0;
+    font-size: 1.2em;
+    background-color: lawngreen;
+    border: none;
+    border-radius: 0.5em;
+    cursor: pointer;
+}
+#loginDialog_employee,
+#loginDialog_customer {
+    width: 30%; 
+    margin: 10;
+    border: 0;
+    border-radius: 0.2rem;
+    box-shadow: 0 0 1em black;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
