--- a/Fairies/web/html/home_employee.css
+++ b/Fairies/web/html/home_employee.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #f0f0f0;
 }
 
@@ -57,13 +57,14 @@ h2 {
 }
 
 /* Search input styles */
-input[type="search"]{
+input[type="search"] {
   flex: 1;
   padding: 10px;
   margin-right: 10px;
   border: 10px solid #ccc;
   border-radius: 5px;
 }
+
 select {
   flex: 1;
   padding: 10px;
@@ -88,9 +89,10 @@ table {
 
 table td {
   padding: 10px;
-  border: 1px  #ccc;
+  border: 1px #ccc;
   text-align: center;
 }
+
 #categoryWrap1 {
   width: 75vw;
   min-width: 320px;
@@ -103,12 +105,15 @@ table td {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: row;
-  justify-content: space-between; /* Adjust as needed */
-  align-items: center; /* Adjust as needed */
+  justify-content: space-between;
+  /* Adjust as needed */
+  align-items: center;
+  /* Adjust as needed */
 }
 
 #contentWrap div {
-  margin-right: 10px; /* Adjust spacing between elements */
+  margin-right: 10px;
+  /* Adjust spacing between elements */
 }
 
 
@@ -121,38 +126,44 @@ table td {
   background: #fff;
   padding: 5px;
   border: 1px solid #4abbc1;
-  transition: .7s .5s cubic-bezier(0,1.55,1,.99);
+  transition: .7s .5s cubic-bezier(0, 1.55, 1, .99);
 }
 
-#categoryNavi > ul {
+#categoryNavi>ul {
   background: #4abbc1;
 }
 
-#categoryNavi > ul > li {
+#categoryNavi>ul>li {
   font-size: .9rem;
 }
-#categoryNavi > ul > li a {
+
+#categoryNavi>ul>li a {
   display: block;
   color: #fff;
   padding: 1rem;
 }
 
-#categoryNavi > ul > li a:hover {
+#categoryNavi>ul>li a:hover {
   background: #078890;
 }
 
-#categoryNavi > ul > li.active {
+#categoryNavi>ul>li.active {
   background: #078890;
 }
+
 #categoryWrap {
   display: flex;
-  flex-wrap: nowrap; /* Prevent wrapping */
-  overflow-x: auto; /* Enable horizontal scrolling if needed */
+  flex-wrap: nowrap;
+  /* Prevent wrapping */
+  overflow-x: auto;
+  /* Enable horizontal scrolling if needed */
 }
 
 .category {
-  flex: 0 0 auto; /* Allow items to shrink and don't grow */
-  margin-right: 10px; /* Adjust spacing between categories */
+  flex: 0 0 auto;
+  /* Allow items to shrink and don't grow */
+  margin-right: 10px;
+  /* Adjust spacing between categories */
 }
 
 
@@ -164,12 +175,12 @@ table td {
 } */
 
 .category h2 {
-  font-size: 1.5rem ;
+  font-size: 1.5rem;
   font-weight: bold;
   background-color: #4abbc1;
   color: white;
-   padding-left: 15px;
-   padding-bottom: 10px; 
-   padding-right: 15px;
-   padding-top: 15px;
+  padding-left: 15px;
+  padding-bottom: 10px;
+  padding-right: 15px;
+  padding-top: 15px;
 }
