--- a/Fairies/web/html/home_employee.css
+++ b/Fairies/web/html/home_employee.css
@@ -3,16 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 
+
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-
+  height: 100%;
+  background-color: green;
 }
 
 header {
   text-align: center;
-  /* padding: 20px 0; */
   background-color: #F8FEFE;
 }
 
@@ -25,6 +26,7 @@ main {
   margin: 0 auto;
   padding: 100px;
   background-color: blue;
+  height: 100%;
 }
 
 h2 {
@@ -36,7 +38,6 @@ h2 {
   color: #333;
 }
 
-/* Search input styles */
 input[type="search"] {
   flex: 1;
   padding: 10px;
