--- a/Fairies/web/html/home_employee.css
+++ b/Fairies/web/html/home_employee.css
@@ -13,6 +13,7 @@ body {
   height: 100vh;
   /* 高さ　*/
   background-color: green;
+  margin-top: 0;
 }
 
 /* headerのスタイル */
@@ -84,9 +85,17 @@ main {
   background-color: #B0DAFF;
   /* 高さ */
   height: 90%;
+}
+
+form {
+  height: 100%;
+}
+
+
+#screen {
   /* 横並びにする */
   display: flex;
-  top: 50 px;
+  height: 100%
 }
 
 /* h2タグのスタイル */
@@ -198,6 +207,7 @@ table td {
 
 /* 横の従業員一覧の設定 */
 #naviWrap {
+
   /* 横幅の距離 */
   width: 20%;
   /* 最小幅を指定 */
@@ -206,6 +216,7 @@ table td {
   background: #146C94;
   /* 内側の余白の指定 */
   padding: 5px;
+
 
 
 }
