ドッカー消す

--- a/Fairies/php/home_employee.css
+++ b/Fairies/php/home_employee.css
@@ -13,7 +13,6 @@ body {
   height: 100vh;
   /* 高さ　*/
   background-color: green;
-  margin-top: 0;
 }
 
 /* headerのスタイル */
@@ -53,6 +52,9 @@ header ul {
   display: flex;
   /* 均等に */
   justify-content: space-around;
+  /* 中央ぞろえ */
+  align-items: center;
+
 
 }
 
@@ -85,17 +87,9 @@ main {
   background-color: #B0DAFF;
   /* 高さ */
   height: 90%;
-}
-
-form {
-  height: 100%;
-}
-
-
-#screen {
   /* 横並びにする */
   display: flex;
-  height: 100%
+  top: 50 px;
 }
 
 /* h2タグのスタイル */
@@ -154,7 +148,7 @@ button {
   /* 周りの線の角を指定 */
   cursor: pointer;
   /* カーソルの形状をポインターに指定 */
-  font-size: larger;
+  font-size: larger ;
 }
 
 /* テーブルのスタイル */
@@ -163,14 +157,6 @@ table {
   /*横幅を指定*/
   border-collapse: collapse;
   /* セルの境界線を結合 */
-  border-top: solid 1px #19A7CE;
-  /*枠線・上*/
-  border-bottom: solid 1px #19A7CE;
-  /*枠線・下*/
-  border-right: solid 1px #19A7CE;
-  /*枠線・右*/
-  border-left: solid 1px #19A7CE;
-  /*枠線・左*/
 }
 
 /* テーブルタグのtdタグ */
@@ -187,10 +173,10 @@ table td {
 
 /* 従業員一覧のスタイル */
 #contentWrap {
-
+  
   background-color: #F8FEFE;
   /* 背景色を指定 */
-  padding: 20px;
+  padding: 20px;  
   /* 内側の余白の指定 */
   border-radius: 5px;
   /* 周りの線の角を指定 */
@@ -204,7 +190,7 @@ table td {
   /* アイテム間の均等なスペースを配置 */
   align-items: center;
   /* アイテムを中央揃えに配置 */
-  overflow: scroll;
+  overflow: scroll; 
 }
 
 /* 従業員一覧のdiv */
@@ -215,7 +201,6 @@ table td {
 
 /* 横の従業員一覧の設定 */
 #naviWrap {
-
   /* 横幅の距離 */
   width: 20%;
   /* 最小幅を指定 */
@@ -224,7 +209,6 @@ table td {
   background: #146C94;
   /* 内側の余白の指定 */
   padding: 5px;
-
 
 
 }
@@ -326,3 +310,4 @@ table td {
   padding-top: 15px;
   /* 上側のパディングを指定 */
 }
+
