--- a/Fairies/php/home_employee.css
+++ b/Fairies/php/home_employee.css
@@ -87,9 +87,18 @@ main {
   background-color: #B0DAFF;
   /* 高さ */
   height: 90%;
+
+  top: 50 px;
+}
+
+form {
+  height: 100%;
+}
+
+#screen {
   /* 横並びにする */
   display: flex;
-  top: 50 px;
+  height: 100%;
 }
 
 /* h2タグのスタイル */
@@ -148,7 +157,7 @@ button {
   /* 周りの線の角を指定 */
   cursor: pointer;
   /* カーソルの形状をポインターに指定 */
-  font-size: larger ;
+  font-size: larger;
 }
 
 /* テーブルのスタイル */
@@ -157,6 +166,14 @@ table {
   /*横幅を指定*/
   border-collapse: collapse;
   /* セルの境界線を結合 */
+  border-top: solid 1px #19A7CE;
+  /*枠線・上*/
+  border-bottom: solid 1px #19A7CE;
+  /*枠線・下*/
+  border-right: solid 1px #19A7CE;
+  /*枠線・右*/
+  border-left: solid 1px #19A7CE;
+  /*枠線・左*/
 }
 
 /* テーブルタグのtdタグ */
@@ -173,10 +190,10 @@ table td {
 
 /* 従業員一覧のスタイル */
 #contentWrap {
-  
+
   background-color: #F8FEFE;
   /* 背景色を指定 */
-  padding: 20px;  
+  padding: 20px;
   /* 内側の余白の指定 */
   border-radius: 5px;
   /* 周りの線の角を指定 */
@@ -190,7 +207,7 @@ table td {
   /* アイテム間の均等なスペースを配置 */
   align-items: center;
   /* アイテムを中央揃えに配置 */
-  overflow: scroll; 
+  overflow: scroll;
 }
 
 /* 従業員一覧のdiv */
@@ -310,4 +327,3 @@ table td {
   padding-top: 15px;
   /* 上側のパディングを指定 */
 }
-
