--- a/Fairies/php/form_employee.css
+++ b/Fairies/php/form_employee.css
@@ -1,8 +1,80 @@
+/* headerのスタイル */
 header {
+    /* 中央ぞろえ */
     text-align: center;
-    background-color: #49ada1;
-    color: #fff;
-    padding: 30px 0;
+    background-color: #F8FEFE;
+    /* 縦 */
+    height: 10%;
+    /* 横並びに */
+    display: flex;
+    /* 要素を横並びに配置 */
+    justify-content: space-between;
+    /* 中央揃えに変更 */
+    align-items: center;
+    box-shadow: 0px 0px 0px -2px rgb(30, 28, 28) inset;
+    /* 影のスタイルを指定 ひとまず*/
+}
+
+header {
+    height: 10vh;
+    text-align: center;
+    background-color: #F8FEFE;
+    padding: 20px 0;
+    /* 横並びに */
+    display: flex;
+    justify-content: space-between;
+    /* 中央揃えに変更 */
+    align-items: center;
+    box-shadow: 2px 2px 4px -2px rgb(30, 28, 28) inset;
+}
+
+/* headerの画像のスタイル */
+header img {
+    /* 右側の余白を自動で設定 */
+    margin: auto;
+    /* 高さ */
+    height: 4.5rem;
+    /* 横幅 */
+    width: 35vh;
+}
+
+/* ヘッダー内のul */
+header ul {
+    /* リストアイテムを均等に配置 */
+    justify-content: space-around;
+    /* リストアイテムを中央揃えに配置 */
+    align-items: center;
+    /* 横並びに */
+    display: flex;
+    /* 均等に */
+    justify-content: space-around;
+    /* 中央ぞろえ */
+    align-items: center;
+
+
+}
+
+/* 従業員一覧のliタグ */
+header ul li {
+    /* テキストサイズ */
+    font-size: 1.8rem;
+    /* 黒丸を消す */
+    list-style: none;
+    padding: 10px 20px;
+    /*余白*/
+    background: #e3f6f5;
+    /*背景色*/
+    border-top: solid 1px #19A7CE;
+    /*枠線・上*/
+    border-bottom: solid 1px #19A7CE;
+    /*枠線・下*/
+    border-right: solid 1px #19A7CE;
+    /*枠線・右*/
+    border-left: solid 1px #19A7CE;
+    /*枠線・左*/
+
+    margin-right: 15px;
+
 }
 
 form {
@@ -15,6 +87,29 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+main {
+    max-width: 70%;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #B0DAFF;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* 新しいスタイル */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    /* 画面の高さいっぱいに表示 */
+}
+
+
+#screen {
+    width: 70%;
+    background-color: #fff;
+    padding: 30px;
+}
+
 h2 {
     text-align: center;
 }
@@ -24,10 +119,12 @@ textarea {
     width: 100%;
     padding: 5px;
 }
+
 input[type=text] {
     width: 60%;
     padding: 5px;
 }
+
 #submit {
     width: 100%;
     height: 2em;
@@ -37,4 +134,3 @@ input[type=text] {
     border: none;
     border-radius: 10px;
 }
-
