--- a/Fairies/php/login.css
+++ b/Fairies/php/login.css
@@ -1,25 +1,22 @@
-*{
-    box-sizing: border-box ;
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-  }
+}
 
 header {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     position: sticky;
     top: 0;
-    border-bottom: 10px solid #B0DAFF ;
+    border-bottom: 10px solid #B0DAFF;
 
 }
 
-h2{
+h2 {
     margin-top: 10px;
     margin-bottom: 10px;
     font-weight: bold;
@@ -40,12 +37,13 @@ h2{
     font-size: xx-large;
 }
 
-#loginBtn1,#loginBtn2 {
+#loginBtn1,
+#loginBtn2 {
     margin-top: 10px;
-    color:black;
+    color: black;
     cursor: pointer;
     background-color: #B0DAFF;
-    padding: 20px; 
+    padding: 20px;
 }
 
 #loginDialog {
@@ -106,9 +104,10 @@ h2{
     border-radius: 0.5em;
     cursor: pointer;
 }
+
 #loginDialog_employee,
 #loginDialog_customer {
-    width: 30%; 
+    width: 30%;
     margin: 10;
     border: 0;
     border-radius: 0.2rem;
