--- a/Fairies/php/login.css
+++ b/Fairies/php/login.css
@@ -15,40 +15,25 @@ header {
 .title {
 
     position: relative;
-    align-items: center;
-    text-align: center;
-    height: 60px;
+    height: 70%;
+    width: 70%;
+    margin: 0 auto;
+
 }
 
 .title img {
-    width: 70%;
+    width: 100%;
 
 }
 
 .title p {
     /* 重ねる */
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* 文字フォント */
     font-weight: bold;
     font-size: large;
-    text-align: center;
+    font-size: 30px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
