--- a/Fairies/php/personal_customer.css
+++ b/Fairies/php/personal_customer.css
@@ -107,3 +107,20 @@ h4{
     top: 300px;
     left: 100px;
 }
+.folder{
+    width: 350px;
+    height:520px;
+    position: absolute;
+    top: 100px;
+    left: 1130px;
+    display: flex;
+    flex-flow: column;
+    margin: 1px auto;
+}
+.photo{
+    background-color: white;
+    width: 350px;
+    height:520px;
+    margin: 3px auto;
+    ;
+}
